# OperatingSystemLabs

./: .gitignore  README.md  build_all.cmd  build_all.sh  clear.cmd  clear.sh  update.cmd  update.sh
Lab1/: CMakeLists.txt  README.md  build.cmd  build.sh  helloworld.cpp
Lab1/src/: helloworld.cpp
Lab2/: CMakeLists.txt  README.md  build.cmd  build.sh
Lab2/src/: background_process.cpp  background_process.h  main.cpp
Lab3/: CMakeLists.txt  README.md  build.cmd  build.sh
Lab3/src/: Timer.cpp
Lab4/: CMakeLists.txt  README.md  build.cmd  build.sh
Lab4/src/: Emulator.cpp  Logger.cpp
Lab5/: CMakeLists.txt  README.md  build.cmd  build.sh
Lab5/src/: Emulator.cpp  SerialPort.cpp  SerialPort.h  Server.cpp  client.py  server.py
Lab5/templates/: index.html
Lab6/: .qmake.stash  CMakeLists.txt  Lab6.pro  Makefile  Makefile.Debug  Makefile.Release  build.cmd  build.sh  ui_MainWindow.h
Lab6/src/: MainWindow.cpp  MainWindow.h  main.cpp
lab6/: CMakeLists.txt  README.md  build.cmd  build.sh
lab6/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
temp/src/: MainWindow.ui
